welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: value droite is not a member of Nothing
    if(estFaceMur()==true){droite();return true;}droite()}
                                                 ^